Import of LEEDO/WWW-Discogs-0.03 from CPAN.
gitpan-cpan-distribution: WWW-Discogs
gitpan-cpan-version:      0.03
gitpan-cpan-path:         LEEDO/WWW-Discogs-0.03.tar.gz
gitpan-cpan-author:       LEEDO
gitpan-cpan-maturity:     released

--- a/Changes
+++ b/Changes
@@ -6,3 +6,8 @@ Revision history for Perl extension WWW::Discogs.
 0.02  Wed Jul  2 09:57:00 2008
 	- bump perl requirement to 5.8
 	- documentation
+
+0.03  Mon Jul  7 15:39:00 2008
+	- use URI path and param methods to construct request
+	- switch to XML::Simple
+	- interface changes
