--- a/Changes
+++ b/Changes
@@ -11,3 +11,8 @@ Revision history for Perl extension WWW::Discogs.
 	- use URI path and param methods to construct request
 	- switch to XML::Simple
 	- interface changes
+
+0.04  Wed Jul  9 19:37:00 2008
+	- fix broken test
+	- begin documenting response classes (release, artist,
+	  label, search)
