Import of LEEDO/WWW-Discogs-0.06 from CPAN.
gitpan-cpan-distribution: WWW-Discogs
gitpan-cpan-version:      0.06
gitpan-cpan-path:         LEEDO/WWW-Discogs-0.06.tar.gz
gitpan-cpan-author:       LEEDO
gitpan-cpan-maturity:     released

--- a/Changes
+++ b/Changes
@@ -19,3 +19,6 @@ Revision history for Perl extension WWW::Discogs.
 
 0.05  Sun Jul 13 14:18:00 2008
 	- return lists instead of arrayrefs
+
+0.06  Mon Oct 05 04:29:00 2009
+  - updated tests to pass with new discogs info
